--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -13,6 +13,7 @@
     # Enable an experimental heuristic that shifts the hunk boundary in an
     # attempt to make the resulting patch easier to read.
     indentHeuristic = true
+    wsErrorHighlight = all
 
 [diff "bin"]
 
